# src/routes/viaje.route.js
@@ -4,5 +4,7 @@ const viajeCtrl = require('../controllers/viaje.controller');
 
 // POST /api/viaje/asignar -> Confirmar asignación por parte de la operadora
 router.post('/asignar', viajeCtrl.asignarViaje);
+router.put('/aceptar/:idViaje', viajeCtrl.aceptarViaje);
+router.put('/rechazar/:idViaje', viajeCtrl.rechazarViaje);
 
 module.exports = router;
